# foodchain

./: Cargo.toml  README.md  compose.yml
src/: main.rs  persist.rs  settings.rs  views.rs
src/models/: product.rs
src/services/: mod.rs  openfoodfacts.rs
